<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/recordIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_recording_on"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/btnAudioSelection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_baseline_volume_up_24" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/svrShare"
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvParticipants"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1" />

    <live.videosdk.rtc.android.java.Lrc_view.impl.LrcView
        android:id="@+id/lrcView"
        android:layout_width="match_parent"
        android:layout_height="243dp" />

    <Button
        android:id="@+id/musicBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Play a Song" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Stop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/leave_meeting"
            android:enabled="false"
            android:src="@drawable/ic_outline_call_end_24"
            app:backgroundTint="@color/md_red_700"
            app:fabSize="mini"
            app:tint="@color/white" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/toggle_mic"
            android:enabled="false"
            android:src="@drawable/ic_baseline_mic_24"
            app:fabSize="mini" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnWebcam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/toggle_camera"
            android:enabled="false"
            android:src="@drawable/ic_baseline_videocam_24"
            app:fabSize="mini" />

        <!--
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSwitchCameraMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:contentDescription="@string/switch_camera"
                    android:enabled="false"
                    android:src="@drawable/ic_baseline_flip_camera_android_24"
                    app:fabSize="mini" />
                -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/chat"
            android:enabled="false"
            android:src="@drawable/ic_baseline_chat_24"
            app:fabSize="mini" />



    </LinearLayout>


</LinearLayout>